tests/ui/feature-gates/feature-gate-const-attr-paths.stderr
error[E0658]: const item paths in builtin attributes are experimental
  --> $DIR/feature-gate-const-attr-paths.rs:4:14
   |
LL | #[repr(align(REPR_ALIGN))]
   |              ^^^^^^^^^^
   |
   = help: add `#![feature(const_attr_paths)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: const item paths in builtin attributes are experimental
  --> $DIR/feature-gate-const-attr-paths.rs:9:15
   |
LL | #[repr(packed(REPR_PACK))]
   |               ^^^^^^^^^
   |
   = help: add `#![feature(const_attr_paths)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: const item paths in builtin attributes are experimental
  --> $DIR/feature-gate-const-attr-paths.rs:14:15
   |
LL | #[rustc_align(FN_ALIGN)]
   |               ^^^^^^^^
   |
   = help: add `#![feature(const_attr_paths)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: const item paths in builtin attributes are experimental
  --> $DIR/feature-gate-const-attr-paths.rs:19:22
   |
LL | #[rustc_align_static(STATIC_ALIGN)]
   |                      ^^^^^^^^^^^^
   |
   = help: add `#![feature(const_attr_paths)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0658`.
